--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -2,6 +2,7 @@ html, body, #app {
     height: 100%;
     margin: 0;
     padding: 0;
+    min-width: 1366px;
 }
 .el-breadcrumb {
     margin-bottom: 15px;
@@ -19,4 +20,13 @@ html, body, #app {
 }
 .el-cascader{
     width: 50%;
+}
+.el-tag {
+    margin: 7px;
+}
+.bdtop {
+    border-top: 1px solid #eee;
+}
+.bdbottom {
+    border-bottom: 1px solid #eee;
 }
